chore: regenerate service (sdk.20251218)
